fix readability issue, added margins to div, changed text color. will fix the svg issue

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -63,12 +63,12 @@
   box-sizing: border-box;
   margin-top: .8em;
   text-align: center;
-  background-color: #bf9aca;
+  background: transparent;
 }
 .nav-item {
   
   border-radius: .8em;
-  background-color: #bf9aca;
+  background: transparent;
 
 }
 .nav-item:hover {
@@ -115,9 +115,10 @@ color: #c7e8f3;
 .card-body {
   border-style: solid;
   border-width: .8em;
-  background: linear-gradient(#eda2c0, #8e4162, #41393E )
+  background: #41393E;
   
 }
+
 .mb-2 text-muted card-subtitle h6 {
   color: black;
 }
@@ -330,4 +331,12 @@ https://getbootstrap.com/docs/5.1/components/card/#using-custom-css
   opacity: 0;
   width: 9%;
   height: 100%;
+}
+.text-center {
+  background: transparent;
+}
+
+#header-title, .text-center {
+  background: linear-gradient(#eda2c0, #8e4162, #41393E ) !important;
+  background-color:tomato !important;
 }
